kubernetes/Cluster-Int-Temp/deployments/monitoring/grafana/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: grafana
    namespace: monitoring
spec:
    selector:
        app: grafana
    ports:
        - port: ENC[AES256_GCM,data:cVyUPQ==,iv:VWRMs6f7OrrbiL2iy0WO9TPsW0pg2/5HoDPnnLAB2fk=,tag:7atvSOT0Y6o7wTawNj0VjA==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsM0FxWmhvS0V2QjFRajVn
[...]
            2U/5Wyl/ZLowjYxTgdnJpvfsbKhcrB1uoNQcY2LspxtssB+NC950xA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T13:23:38Z"
    mac: ENC[AES256_GCM,data:gJXJ6WdSkxKxmZzoes2XZPqlt3PTqofoUye2fsTJZRxOXDgeV3AmHgF66Otf4vGsczuLkM4Imz5iK3iddSJaySIcN4h/2cUjX+mhG6ERl8isFMVAp/iG4S0s0ju4T0yXhPQg+oZBVtdJP41uIE+SStdCmNqrnF4ytSdj15j80wE=,iv:dwnKq36GUrJshpqx3/PWntQBzqF0K/G5fzEd+ADINuY=,tag:zMo2BMxnM1c2DiT5pS2tAg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
